--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -29,7 +29,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
         <meta http-equiv="Expires" content="0" />
         <meta name='revisit-after' content='1 days' />
         <link rel="alternate" href="http://quynhon247.com" hreflang="vi-vn" />
-        <meta content="VnExpress" property="og:site_name" />
+        <meta content="QuyNhon247.com" property="og:site_name" />
         <meta content="website" property="og:type" />
 
         <script type="text/javascript">
