--- a/module/Frontend/view/v1/frontend/category/index.phtml
+++ b/module/Frontend/view/v1/frontend/category/index.phtml
@@ -1,19 +1,8 @@
-<!--main sub page heading-->
-<section id="page-head" class="margin-control">
-    <div class="container">
-        <div class="row col-md-12">
-            <div class="page-heading">
-                <h1><?php echo $this->arrCategoryDetail['cate_name']; ?></h1>
-                <h4>Có <?php echo $this->arrCategoryDetail['cate_total_product']; ?> rao vặt trong Danh mục này</h4>
-            </div>
-        </div>
-    </div>
-</section><!--end main page heading-->
 <!--Detail -->
 <section id="detail">
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-9">
                 <?php if (!empty($this->arrProductVipList)): ?>
                     <div class="ads-detail">
                         <div class="premium-ads-sub">
@@ -45,56 +34,139 @@
                         </div> <!--end premium ads-->
                     </div>
                 <?php endif; ?>
-                <!--                <div class="row">
-                                <div class="col-lg-12">
-                                    <section class="panel">-->
-                <!--                        
-                                    </section>
-                                </div>
-                            </div>-->
 
                 <!--Related Ads-->
                 <div id="relatedAds">
-                    <h4 class="inner-heading">DANH SÁCH RAO VẶT</h4>
-                    <?php if (!empty($this->arrProperties)): ?>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="ad-tabs">
-                                    <span class="tab <?php if (empty($this->params['properties'])) : ?> active<?php endif; ?>">Tất cả</span>
-                                    <?php foreach ($this->arrProperties as $value): ?>
-                                        <span class="tab"><?php echo html_entity_decode($value['prop_name']); ?></span>
-                                    <?php endforeach; ?>
-                                </div>
-                            </div>
-                        </div>
-                    <?php endif; ?>
                     <div class="row">
-                        <table class="table table-striped table-advance table-hover">
-                            <thead>
-                                <tr>
-                                    <th style=" color: #005fcc" class=" col-lg-7"><i class="fa fa-list-alt"></i> Tiêu đề</th>
-                                    <th class="text-center"  class="hidden-phone" class=" col-lg-2 text-center" style=" color: #005fcc">Khu vực</th>
-                                    <th class="text-center"  style=" color: #005fcc" class=" col-lg-1"> Xem</th>
-                                    <th class="text-center"  style=" color: #005fcc" class=" col-lg-1">Nhu cầu</th>
-                                    <th class="text-center" style=" color: #005fcc">Cập nhật</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <?php foreach ($this->arrProductList as $value): ?>
-                                    <tr>
-                                        <td>
-                                            <a href="<?php echo $this->serverUrl() . $this->Url('product', array('controller' => 'product', 'action' => 'detail', 'productslug' => $value["prod_slug"], 'productId' => $value["prod_id"])) ?>" style=" text-decoration: none"><i class="fa fa-hand-o-right"></i> <?php echo html_entity_decode($value['prod_name']); ?> </a>
-                                        </td>
-                                        <td class="text-center"><?php echo empty($value['prod_location']) ? 'Toàn tỉnh' : $arrLocation[$value['prod_location']]['dist_name']; ?></td>
-                                        <td class="text-center"><?php echo $value['prod_viewer']?></td>
-                                        <td class="text-center"><span><?php echo $this->arrProperties[$value['prop_id']]['prop_name'];?></span></td>
-                                        <td class="text-center">
-                                            <span><?php echo My\General::formatDateString($value['prod_created']) ?></span>
-                                        </td>
-                                    </tr>
-                                <?php endforeach; ?>
-                            </tbody>
-                        </table>
+                        <div class="sidebar">
+                            <section class="panel panel-primary">
+                                <div class="panel-body" style="padding: 0px">
+                                    <div class="row border-buttom">
+                                        <div class="col-md-12" style="margin-top: 10px">
+                                            <div class="col-md-9 text-left">
+                                                <a class="btn btn-success"><b><?php echo $this->arrCategoryParent['cate_name']; ?></b></a>
+                                            </div>
+                                            <div class="col-md-3 text-right">
+                                                <select class="form-control change-location">
+                                                    <?php
+                                                    $arrLocation = unserialize(ARR_DISTRICT);
+                                                    $propSlectName = 'tat-ca';
+                                                    $propSlectId = 0;
+                                                    if (!empty($this->params['propId'])) {
+                                                        $propSlectName = $this->arrPropertiesList[$this->params['propId']]['prop_slug'];
+                                                        $propSlectId = $this->arrPropertiesList[$this->params['propId']]['prop_id'];
+                                                    }
+                                                    ?>
+                                                    <option value="<?php echo $this->serverUrl() . $this->Url('category', ['cateSlug' => $this->arrCategoryDetail['cate_slug'], 'cateId' => $this->arrCategoryDetail['cate_id'], 'propSlug' => $propSlectName, 'propId' => $propSlectId]) ?>">Toàn tỉnh</option>
+                                                    <?php
+                                                    foreach ($arrLocation as $district):
+                                                        ?>
+                                                        <option value="<?php echo $this->serverUrl() . $this->Url('category', ['cateSlug' => $this->arrCategoryDetail['cate_slug'], 'cateId' => $this->arrCategoryDetail['cate_id'], 'dist' => $district['dist_slug'], 'distId' => $district['dist_id'], 'propSlug' => $propSlectName, 'propId' => $propSlectId]) ?>"<?php if ($params['distId'] == $district['dist_id']): ?>selected<?php endif; ?>><?php echo $district['dist_name']; ?></option>
+                                                    <?php endforeach; ?>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <div class="row">
+                                        <div class="col-md-12 border-buttom">
+                                            <div class="col-md-12">
+
+                                                <a class="btn <?php if ($this->arrCategoryDetail['parent_id'] == 0): ?>btn-info<?php endif; ?> btn-xs" style="margin-bottom: 3px; margin-right: 10px; font-weight: bold" href="<?php echo $this->serverUrl() . $this->Url('category', ['cateSlug' => $this->arrCategoryParent['cate_slug'], 'cateId' => $this->arrCategoryParent['cate_id']]); ?>">
+                                                    Tất cả
+                                                </a>
+                                                <?php foreach ($this->arrCategoryChildren as $cate): ?>
+                                                    <a class="btn <?php if ($this->arrCategoryDetail['cate_id'] == $cate['cate_id']): ?>btn-info<?php endif; ?> btn-xs" style="margin-bottom: 3px; margin-right: 10px; font-weight: bold" href="<?php echo $this->serverUrl() . $this->Url('category', ['cateSlug' => $cate['cate_slug'], 'cateId' => $cate['cate_id']]); ?>">
+                                                        <?php echo $cate['cate_name']; ?>
+                                                    </a>
+                                                <?php endforeach; ?>
+                                            </div>
+                                        </div>
+                                        <hr/>
+                                        <div class="col-md-12" style="margin-bottom: 10px">
+                                            <div class="col-md-12">
+                                                <?php
+                                                $distSlectName = 'toan-tinh';
+                                                $distSlectId = 0;
+                                                if (!empty($this->params['distId'])) {
+                                                    $distSlectName = $arrLocation[$this->params['distId']]['dist_slug'];
+                                                    $distSlectId = $arrLocation[$this->params['distId']]['dist_id'];
+                                                }
+                                                ?>
+                                                <a class="btn <?php if (empty($this->params['propId'])): ?>btn-warning<?php endif; ?> btn-xs" style="margin-right: 10px; font-weight: bold" href="<?php echo $this->serverUrl() . $this->Url('category', ['cateSlug' => $this->arrCategoryDetail['cate_slug'], 'cateId' => $this->arrCategoryDetail['cate_id'], 'dist' => $distSlectName, 'distId' => $distSlectId]) ?>">
+                                                    Tất cả
+                                                </a>
+                                                <?php
+                                                foreach ($this->arrPropertiesList as $prop):
+                                                    ?>
+                                                    <a class="btn <?php if (!empty($this->params['propId']) && $this->params['propId'] == $prop['prop_id']): ?>btn-warning<?php endif; ?> btn-xs" style="margin-right: 10px; font-weight: bold" href="<?php echo $this->serverUrl() . $this->Url('category', ['cateSlug' => $this->arrCategoryDetail['cate_slug'], 'cateId' => $this->arrCategoryDetail['cate_id'], 'dist' => $distSlectName, 'distId' => $distSlectId, 'propSlug' => $prop['prop_slug'], 'propId' => $prop['prop_id']]) ?>">
+                                                        <?php echo $prop['prop_name']; ?>
+                                                    </a>
+                                                <?php endforeach; ?>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section><!--end main page heading-->
+                            <section class="panel">
+                                <div class="panel-body" style="padding: 0px">    
+                                    <div class="adv-table editable-table">
+                                        <section id="unseen">
+                                            <table class="table table-hover table-striped table-condensed cf">
+                                                <thead class="cf">
+                                                    <tr>
+                                                        <th class="text-center"><i class="fa fa-thumb-tack" aria-hidden="true"></i> Tiêu đề</th>
+                                                        <th class="text-center" width="100px"><i class="fa fa fa-globe" aria-hidden="true"></i> Khu vực</th>
+                                                        <th class="text-center" width="85px"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Nhu cầu</th>
+                                                        <th class="text-center" width="57px"><i class="fa fa-eye" aria-hidden="true"></i> Xem</th>
+                                                        <th class="text-center" width="93px"><i class="fa fa-calendar" aria-hidden="true"></i> Cập nhật</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <?php
+                                                    if ($this->arrContentList):
+                                                        foreach ($this->arrContentList as $arrContent):
+                                                            ?>
+                                                            <tr id="item-<?php echo $arrContent['cont_id'] ?>">
+                                                                <td style="vertical-align: middle">
+                                                                    <div class="col-md-1">
+                                                                        <a href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname'];?>">
+                                                                            <img src="http://dev.st.raovat.vn/uploads/user/2016/05/01/thumbs/150x150/1462115823.285.jpg" style="width: 30px; height: 30px"></a>
+                                                                    </div>
+                                                                    <div class="col-md-11" style="margin-top: 5px">
+                                                                        <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $arrContent['cont_detail_text']; ?>" class="red-tooltip" style="text-decoration: none">
+                                                                            <b><?php echo $arrContent['cont_title']; ?></b>
+                                                                        </a>
+                                                                    </div>
+                                                                </td>
+                                                                <td class="text-center" style="vertical-align: middle">
+                                                                    <a href="javascript:;" style="text-decoration: none;color: #69A467"><b><?php echo empty($arrContent['dist_id']) ? 'Toàn tỉnh' : $this->arrLocation[$arrContent['dist_id']]['dist_name']; ?></b></a>
+                                                                </td>
+                                                                <td class="text-center" style="vertical-align: middle">
+                                                                    <a href="#" style="text-decoration: none; color: #A94464"><b><?php echo $this->arrPropertiesList[$arrContent['prop_id']]['prop_name']; ?></b></a>
+                                                                </td>
+
+                                                                <td class="text-center" style="vertical-align: middle">
+                                                                    <?php echo $arrContent['cont_views']; ?>
+                                                                </td>
+                                                                <td class="text-center" style="vertical-align: middle">
+                                                                    <?php echo My\General::formatDateString($arrContent['created_date']);?>
+                                                                </td>
+                                                            </tr>
+                                                        <?php endforeach; ?>
+                                                    <?php else: ?>
+                                                        <tr><td colspan="5" class="text-center">Hiện tại chưa chưa có tin rao vặt nào cả.</td></tr>
+                                                    <?php endif; ?>
+                                                </tbody>
+                                            </table>
+                                        </section>
+                                    </div>
+                                    <div>
+                                        <?php echo $this->paging; ?>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
                     </div><!--end related ads-->
                     <div class="row">
                         <div class="pagi">
@@ -104,7 +176,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="sidebar">
                     <?php if (!empty($this->arrCategoryChildrenList)): ?>
                         <div class="side-widget clearfix">
@@ -148,3 +220,6 @@
         </div>
     </div>
 </section><!--end details-->
+<script>
+    Category.index();
+</script>
