--- a/module/Frontend/view/v1/frontend/content/complete.phtml
+++ b/module/Frontend/view/v1/frontend/content/complete.phtml
@@ -2,7 +2,11 @@
     <div class="container">
         <div class="row col-md-12">
             <div class="page-heading">
-                <h1>ĐĂNG TIN RAO VẶT THÀNH CÔNG </h1>
+                <?php if ($this->completeSession->type == 'add'): ?>
+                    <h1>ĐĂNG TIN RAO VẶT THÀNH CÔNG </h1>
+                <?php else: ?>
+                    <h1>CHỈNH SỬA RAO VẶT THÀNH CÔNG </h1>
+                <?php endif; ?>
             </div>
         </div>
     </div>
@@ -20,9 +24,13 @@
                                     <div class="col-md-12 border-detail">
                                         <div id="form">
                                             <div class="alert alert-success alert-block fade in">
-                                                <h4><i class="fa fa-thumbs-o-up"></i> Chúc mừng bạn đã đăng tin rao vặt thành công!</h4>
-                                                <h4><i class="fa fa fa-bullhorn"></i> Tiêu đề : <?php echo $this->completeSession->title;?></h4>
-                                                <p>- Bạn có thể click vào đây để <a href="<?php echo $this->serverUrl() . $this->Url('view-content', array('controller' => 'content', 'action' => 'detail','contentSlug' => $this->completeSession->title_slug,'contentId' => $this->completeSession->id)) ?>">xem chi tiết</a></p>
+                                                <?php if ($this->completeSession->type == 'add'): ?>
+                                                    <h4><i class="fa fa-thumbs-o-up"></i> Chúc mừng bạn đã đăng tin rao vặt thành công!</h4>
+                                                <?php else: ?>
+                                                    <h4><i class="fa fa-thumbs-o-up"></i> Chúc mừng bạn chỉnh sửa tin rao vặt thành công!</h4>
+                                                <?php endif; ?>
+                                                <h4><i class="fa fa fa-bullhorn"></i> Tiêu đề : <?php echo $this->completeSession->title; ?></h4>
+                                                <p>- Bạn có thể click vào đây để <a href="<?php echo $this->serverUrl() . $this->Url('view-content', array('controller' => 'content', 'action' => 'detail', 'contentSlug' => $this->completeSession->title_slug, 'contentId' => $this->completeSession->id)) ?>">xem chi tiết</a></p>
                                                 <p>- Hoặc Bạn có thể click vào đây để <a href="">chỉnh sửa</a></p>
                                             </div>
 
